samples/_failures_safe/1761072534_4d2981_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3a3d8812.c: In function ‘main’:
./samples/SAFE/__tmp_3a3d8812.c:151:9: error: ‘total_’ undeclared (first use in this function)
  151 |         total_
      |         ^~~~~~
./samples/SAFE/__tmp_3a3d8812.c:151:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_3a3d8812.c:151:15: error: expected ‘;’ at end of input
  151 |         total_
      |               ^
      |               ;
./samples/SAFE/__tmp_3a3d8812.c:151:9: error: expected declaration or statement at end of input
  151 |         total_
      |         ^~~~~~
./samples/SAFE/__tmp_3a3d8812.c:151:9: error: expected declaration or statement at end of input
